Fix spacing

--- a/less/index.less
+++ b/less/index.less
@@ -154,7 +154,7 @@ div.container {
 
   p {
     font-size: 1.5rem;
-    line-height: 1.2;
+    line-height: 1.5;
   }
 
   header nav {
@@ -205,7 +205,7 @@ div.container {
     width: 48%;
 
     p {
-      padding-bottom: 1.75rem;
+      padding-bottom: 2.25rem;
     }
 
     ul {
